# katrain

./: .flake8  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTIONS.md  CONTRIBUTORS  DockerFile  ENGINE.md  INSTALL.md  LICENSE  Pipfile  QT_FEATURES.md  README.md  THEMES.md  TODO  ai.py  ai2gtp.py  ai_performance - Copy.pickle  ai_performance.pickle  board.py  build_kata  callgrind.out.2020-05-03T13:32:51.487495  callgrind.out.2020-05-03T13:34:21.991352  callgrind.out.2020-05-03T13:35:07.513879  callgrind.out.2020-05-03T13:42:42.424064  callgrind.out.2020-05-03T13:49:46.697811  callgrind_selfplay.out.2020-05-02T23:42:00.917979  callgrind_selfplay.out.2020-05-03T00:00:46.109014  common.py  config-cuda.json  config.json  constants.py  controller.py  crash.py  docker-compose.yml  ellipse.py  engine.py  engine_connector.py  engine_server.py  (+28 more)
.claude/skills/server-deploy/: SKILL.md
.claude/skills/tutorial-book-import/: SKILL.md
.claude/skills/tutorial-data-sync/: SKILL.md
.claude/skills/tutorial-recognition-pipeline/: SKILL.md
.claude/skills/tutorial-video-pipeline/: SKILL.md
.claude/skills/tutorial-voice-pipeline/: SKILL.md
.github/: FUNDING.yml  PROJECT_MANAGEMENT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  compilation_task.md  documentation.md  issue.md  research_investigation.md
.github/actions/get-version/: action.yml
.github/actions/setup-python-uv/: action.yml
.github/issues/: phase1-issues.md
.github/scripts/: setup-labels.md
.github/workflows/: osxbuild.yaml  release.yaml  stale.yml  test.yaml  test_and_build.yaml  winbuild.yaml
KataGo/: README.txt  analysis_config.cfg  japanese_explore_score.cfg  katrain.cfg
bots/: BOTS.md  ai2gtp.py  ai_performance.pickle  engine_connector.py  engine_server.py  lowmem.cfg  selfplay.py  settings.py  start_bot.py
core/: ai.py  common.py  engine.py  game.py  game_node.py  main.py  sgf_parser.py
dev/: buttons.py  crash.py  filebrowser.py  files.py  labels.py  pause.py  profile.py  test.py  textbug.py
docker/: README.md  compose.yaml  katrain_trt.DockerFile
docs/: BUILD_SYSTEM_ANALYSIS.md  COMPILATION_ROADMAP.md  DEPENDENCY_TREE.md  METAL_COMPILATION_RISKS.md  PLATFORM_SPECIFIC_CODE.md
flatpak/: org.katrain.KaTrain.desktop  org.katrain.KaTrain.metainfo.xml  org.katrain.KaTrain.yaml
gui/: __init__.py  badukpan.py  controls.py  kivyutils.py  popups.py
katrain/: __main__.py  config.json  gui.kv  popups.kv
katrain/KataGo/: analysis_config.cfg  contribute.cfg  katago
katrain/core/: ai.py  base_katrain.py  common.py  config_store.py  constants.py  contribute_engine.py  engine.py  game.py  game_node.py  lang.py  platform.py  remote_engine.py  settings_and_logging.py  sgf_parser.py  strings.py  tsumego_frame.py  utils.py
katrain/gui/: UI_INVENTORY.md  ai_settings.py  badukpan.py  controls.py  controlspanel.py  graph.py  kivyutils.py  popups.py  sound.py  style.py  theme.py
katrain/gui/components/: __init__.py  buttons.py  forms.py  layout.py  popup.py  segmented_control.py  settings_popup.py
katrain/gui/widgets/: __init__.py  filebrowser.py  graph.py  movetree.py  progress_loader.py  selection_slider.py
katrain/img/: icon.icns
katrain/qt/: README.md  __init__.py  app.py
katrain/rank-consistency/: 12k_not_random.csv  4k_not_random.csv  8k_not_random.csv  gnugo-parsed.csv  katrain8k-parsed.csv  not_random.gnumeric  pachi3k-parsed.csv  rank_consistency.py
katrain/resources/: analysis_config.cfg
katrain/vision/: board_finder.py  camera.py  config_service.py  grid_calibrator.py  ipc.py  service.py  worker.py
katrain/vision/inference/: base.py  onnx_backend.py  rknn_backend.py
katrain/vision/tools/: Dockerfile.rknn  convert_rknn.sh  export_rknn.py  show_grid.py
katrain/web/: server.py
katrain/web/core/: db.py  models_db.py
katrain/web/tutorials/: db_queries.py  (+3 more)
scripts/: export_training_data.py  generate_tutorial_v002.py  generate_tutorial_v003.py  generate_tutorial_v003_inline.py  generate_video.py  generate_voice.py  import_book.py  migrate_video_fields.sql  popup_harness.py  popup_harness_screenshot.py  prepare_training_data.py  recognize_boards_v2.py  run_and_screenshot.sh  train_patch_classifier.py
scripts/osx/: create-osx-bundle.sh
spec/: KaTrain.spec  KaTrainOSX.spec  file_version.py  hook-kivymd.py
tests/: test_ai.py  test_board.py  test_parser.py  test_remote_engine.py  test_ui_forms.py  test_version.py
tests/data/: LS vs AG - G4 - English.sgf  fox sgf error.sgf  fox sgf works.sgf  ogs.sgf  panda1.sgf  test.gib  xmgt97.sgf
tests/test_vision/: test_board_finder.py  test_grid_calibrator.py  test_letterbox.py
tests/web_ui/: conftest.py  test_tutorial_db_api.py  test_tutorial_db_models.py  test_tutorial_import.py  test_tutorial_progress_model.py  test_tutorial_viewport.py
(+114 files in other folders)
