[project]
name = "KaTrain"
version = "1.17.0"
description = "Go/Baduk/Weiqi playing and teaching app with a variety of AIs"
authors = [{ name = "Sander Land" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "pygame~=2.0 ; platform_system == 'Darwin'",
    "screeninfo>=0.8.1,<0.9 ; platform_system != 'Darwin'",
    "chardet>=5.2.0,<6",
    "docutils>=0.21.2",
    "ffpyplayer>=4.5.1",
    "urllib3>=2.2.2",
    "kivy>=2.3.1",
    "kivymd==0.104.1",
]

[project.urls]
Homepage = "https://github.com/sanderland/katrain"

[project.scripts]
katrain = "katrain.__main__:run_app"

[dependency-groups]
dev = [
    "black>=24.8.0,<25",
    "polib>=1.2.0,<2",
    "pyinstaller>=6.14.1",
    "pytest>=8.3.2,<9",
    "tomli>=1.2.0 ; python_version < '3.11'",
]

[tool.uv]
default-groups = [
    "dev",
]

[tool.black]
line-length = 120

[tool.hatch.build.targets.sdist]
include = ["katrain"]

[tool.hatch.build.targets.wheel]
include = ["katrain"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
