[project]
name = "KaTrain"
version = "2.0.0"
description = "Go/Baduk/Weiqi playing and teaching app with a variety of AIs"
authors = [{ name = "Sander Land" }]
requires-python = ">=3.9,<3.14"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "chardet>=5.2.0,<6",
    "docutils>=0.21.2",
    "katago-client",
    "PySide6>=6.8,<7",
    "pysgf",
    "urllib3>=2.2.2",
]

[project.urls]
Homepage = "https://github.com/sanderland/katrain"

[project.scripts]
katrain = "katrain.qt.app:run_app"

[dependency-groups]
dev = [
    "black>=24.8.0,<25",
    "polib>=1.2.0,<2",
    "pyinstaller>=6.14.1",
    "pytest>=8.3.2,<9",
    "tomli>=1.2.0 ; python_version < '3.11'",
]

[tool.uv]
default-groups = [
    "dev",
]

[tool.uv.sources]
pysgf = { path = "submodules/pysgf" }
katago-client = { path = "submodules/katago-client" }

[tool.black]
line-length = 120

[tool.hatch.build.targets.sdist]
include = ["katrain"]

[tool.hatch.build.targets.wheel]
include = ["katrain"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
